# armnn-yolov5-android-app

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
OpenCVLib430/: build.gradle  local.properties
app/: CMakeLists.txt  build.gradle  local.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: nnbackend.cpp
app/src/main/cpp/arm/armnn/: Layer.hpp
app/src/main/cpp/arm/armnn/layers/: LstmLayer.hpp
app/src/main/cpp/arm/armnnTfLiteParser/: CMakeLists.txt
app/src/main/java/com/brandanalytics/yolov5ncnn/: MainActivity.java  YoloV5Ncnn.java
app/src/main/res/layout/: custom_fullimage_dialog.xml  main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
